--- a/vue_spa/index.html
+++ b/vue_spa/index.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>vue单页</title>
+  <title>Document</title>
 </head>
 <body>
-  <div id="app"></div>
+  <div id="app">
+    <app></app>
+  </div>
 </body>
 </html>
